drop JS_LOCALETOUNICODE_NEEDS_CONST_CHAR check and silence warnings

Since we now require mozjs185, it always needs a const char*
Silence btw warnings about argv sometimes not being used

https://bugzilla.gnome.org/show_bug.cgi?id=666331

Signed-off-by: Marc-Antoine Perennou <Marc-Antoine@Perennou.com>