gi/union.c
@@ -199,8 +199,6 @@ GJS_NATIVE_CONSTRUCTOR_DECLARE(union)
 
     priv = g_slice_new0(Union);
 
-    (void) argv;
-
     GJS_INC_COUNTER(boxed);
 
     g_assert(priv_from_js(context, object) == NULL);
