gjs/importer.c
@@ -969,7 +969,6 @@ GJS_NATIVE_CONSTRUCTOR_DECLARE(importer)
     Importer *priv;
 
     GJS_NATIVE_CONSTRUCTOR_PRELUDE(importer);
-    (void) argv;
 
     priv = g_slice_new0(Importer);
 
